test/ll_parser_definitions_test.test
======= TEST: line 11:
parser test [ x <+ y +> z {u,v,w} m (n (p)) ]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 11:
parser test [ x <+ y +> z {u,v,w} m (n (p)) ]
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 11:
parser test [ x <+ y +> z {u,v,w} m (n (p)) ]
                          ^^^^^^^
------- line 11:
parser test [ x <+ y +> z {u,v,w} m (n (p)) ]
                                    ^^^^^^^
------- line 11:
parser test [ x <+ y +> z {u,v,w} m (n (p)) ]
                                       ^^^
======= END TEST
ERROR: too few defined names in line 12:
parser define bracket "[+"
^^^^^^^^^^^^^^^^^^^^^^^^^^
ERROR: in line 13: expected quoted name after:
parser define bracket "[+" ...
                           ^^^
ERROR: extraneous stuff after selector name in line 14:
parser define selector this is a name ++
                                      ^^
parser print selectors:
        [ code, math, text ]
parser print selectors:
        [ code, math, text, operator 1 ]
ERROR: unrecognized selector name in line 19:
parser define bracket "[+" ... "+]" [text, operator 2]
                                           ^^^^^^^^^^
ERROR: in line 20: expected `,' after:
parser define bracket "<+" ... "+>" [text + operator]
                                     ^^^^
======= TEST: line 24:
parser test <+ hi there +> <+ hi [embedded] there +>
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
------- line 24:
parser test <+ hi there +> <+ hi [embedded] there +>
            ^^^^^^^^^^^^^^
------- line 24:
parser test <+ hi there +> <+ hi [embedded] there +>
                           ^^^^^^^^^^^^^^^^^^^^^^^^^
======= END TEST
======= TEST: lines 25-28:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 25-28:
parser test this is a paragraph +:
                                 ^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 26:
    line 1
    ^^^^^^
------- line 27:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^^^^^^^^^^
------- line 27:
    line 2a:: line 2b; line 2c
                       ^^^^^^^
------- line 28:
    last line
    ^^^^^^^^^
======= END TEST
======= TEST: lines 30-33:
parser test this is a paragraph +:
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- lines 30-33:
parser test this is a paragraph +:
                                ^^
    line 1
^^^^^^^^^^
    line 2a:: line 2b; line 2c
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    last line
^^^^^^^^^^^^^
------- line 31:
    line 1
    ^^^^^^
------- line 32:
    line 2a:: line 2b; line 2c
    ^^^^^^^^^
------- line 32:
    line 2a:: line 2b; line 2c
              ^^^^^^^^^^^^^^^^
------- line 33:
    last line
    ^^^^^^^^^
======= END TEST
